# opengl2-solar-system-simulation-2d

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/modules/: FindSOIL2.cmake
include/: app.h  modules.h  object.h  orbit_path.h  space.h  sphere.h  ui.h
lib/soil2-static-lib/: SOIL2.d  etc1_utils.d  image_DXT.d  image_helper.d
src/: main.cpp  modules.cpp  object.cpp  orbit_path.cpp  space.cpp  sphere.cpp
src/app/: app.cpp  idle.cpp  render.cpp
